--- a/kelas-5/lembah/detektif/kpl-tantangan.html
+++ b/kelas-5/lembah/detektif/kpl-tantangan.html
@@ -197,16 +197,16 @@
     <div class="dropdown-container">
       <button class="dropdown-button" onclick="toggleDropdown()">🎯 Pilih Tantangan</button>
       <div class="dropdown-menu" id="dropdownMenu">
-        <a href="tantangan-1.html">Tantangan 1</a>
-        <a href="tantangan-2.html">Tantangan 2</a>
-        <a href="tantangan-3.html">Tantangan 3</a>
-        <a href="tantangan-4.html">Tantangan 4</a>
-        <a href="tantangan-5.html">Tantangan 5</a>
-        <a href="tantangan-6.html">Tantangan 6</a>
-        <a href="tantangan-7.html">Tantangan 7</a>
-        <a href="tantangan-8.html">Tantangan 8</a>
-        <a href="tantangan-9.html">Tantangan 9</a>
-        <a href="tantangan-10.html">Tantangan 10</a>
+        <a href="tantangan-1.html">🏆Tantangan 1</a>
+        <a href="tantangan-2.html">🌟Tantangan 2</a>
+        <a href="tantangan-3.html">🚀Tantangan 3</a>
+        <a href="tantangan-4.html">🌈Tantangan 4</a>
+        <a href="tantangan-5.html">🔥Tantangan 5</a>
+        <a href="tantangan-6.html">🌿Tantangan 6</a>
+        <a href="tantangan-7.html">⭐Tantangan 7</a>
+        <a href="tantangan-8.html">💨Tantangan 8</a>
+        <a href="tantangan-9.html">🌍Tantangan 9</a>
+        <a href="tantangan-10.html">✨Tantangan 10</a>
       </div>
     </div>
   </div>
