--- a/kelas-5/lembah/detektif/kpl-tantangan.html
+++ b/kelas-5/lembah/detektif/kpl-tantangan.html
@@ -197,7 +197,7 @@
     <div class="dropdown-container">
       <button class="dropdown-button" onclick="toggleDropdown()">🎯 Pilih Tantangan</button>
       <div class="dropdown-menu" id="dropdownMenu">
-        <a href="tantangan-1.html">🏆Tantangan 1</a>
+        <a href="soal-1.html">🏆Tantangan 1</a>
         <a href="tantangan-2.html">🌟Tantangan 2</a>
         <a href="tantangan-3.html">🚀Tantangan 3</a>
         <a href="tantangan-4.html">🌈Tantangan 4</a>
