--- a/kelas-5/lembah/detektif/soal-1.html
+++ b/kelas-5/lembah/detektif/soal-1.html
@@ -180,7 +180,7 @@
       📐
      </div>
      <h1 id="game-title" class="text-2xl md:text-3xl font-black text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-cyan-600 mb-3">Kuis Sistem Pernapasan</h1>
-     <p class="text-gray-600 text-sm mb-5 leading-relaxed">Susun huruf-huruf yang tersedia untuk membentuk jawaban yang benar tentang sistem pernapasan! <span class="block mt-1 text-xs text-cyan-500 font-semibold">🫁 Uji pengetahuanmu tentang pernapasan!</span></p>
+     <p class="text-gray-600 text-sm mb-5 leading-relaxed">Susun huruf-huruf yang tersedia untuk membentuk jawaban yang benar tentang bangun datar! <span class="block mt-1 text-xs text-cyan-500 font-semibold">📏 Uji pengetahuanmu tentang persegi, segitiga, dan persegi panjang!</span></p>
      <div class="bg-gradient-to-r from-blue-100 to-cyan-100 rounded-xl p-3 mb-5 text-left">
       <h3 class="font-bold text-blue-700 mb-1 text-sm">Cara Bermain:</h3>
       <ul class="text-xs text-gray-600 space-y-0.5">
